# courseRequestSystem

./:  .gitignore  CMakeLists.txt  README.md  run_project.sh
inc/: course.h  database.h  request.h  student.h  system.h
src/: course.cpp  database.cpp  main.cpp  request.cpp  student.cpp  system.cpp
